fix: fixed card-body not fitting full title

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,11 @@
     text-align: center;
     max-height: 185px;
     width: 15%;
-    margin: 10px;
+    margin: 12px;
+}
+
+.card .card-body{
+    padding: 0px;
 }
 
 .card .card-title{
